syntax = "proto3";

package fijoy.v1;

import "buf/validate/validate.proto";
import "fijoy/v1/transaction.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Category {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string workspace_id = 2 [(buf.validate.field).string.min_len = 1];
  string name = 3 [(buf.validate.field).string.min_len = 1];
  fijoy.v1.TransactionType category_type = 4 [(buf.validate.field).string.min_len = 1];
}
