syntax = "proto3";

package fijoy.v1;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Workspace {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string namespace = 2 [(buf.validate.field).string.min_len = 1];
  string name = 3 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Timestamp created_at = 4 [(buf.validate.field).required = true];
}

message Workspaces {
  repeated Workspace workspaces = 1 [(buf.validate.field).required = true];
}

message CreateWorkspaceRequest {
  string namespace = 1 [(buf.validate.field).string.min_len = 1];
  string name = 2 [(buf.validate.field).string.min_len = 1];
}

message GetWorkspaceByIdRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetWorkspaceByNamespaceRequest {
  string namespace = 1 [(buf.validate.field).string.min_len = 1];
}

service WorkspaceService {
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (Workspace);
  rpc GetWorkspaces(google.protobuf.Empty) returns (Workspaces) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc GetWorkspaceById(GetWorkspaceByIdRequest) returns (Workspace) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc GetWorkspaceByNamespace(GetWorkspaceByNamespaceRequest) returns (Workspace) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}
